Remove completed implementation plan for IP-02 (Agent-based Bytecode API Mediation); finalize and integrate agent-backed API mediation into `PluginSandbox`. Update related documentation, build configuration, and tests to reflect IP-02 completion.